--- a/recipes/chickenparm.html
+++ b/recipes/chickenparm.html
@@ -7,8 +7,8 @@
 <body>
 
 <h1>Pho Recipe</h1>
-<img src="beefpho.jpg" alt="Bowl of Pho"
-<h2> Authentic pho recipe</h2> 
+<img src="chickenparm.png" alt="Chicken parm sub"
+<h2> Chicken parm recipe</h2> 
 <p> Blah blah blah made up things blah blah</p>
 
 <h1> Ingredients</h1>
